--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,23 @@
   <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
       <li class="nav-item">
-        <a href="#" class="nav-link active" aria-current="page">Home</a>
+        <a
+          href="#"
+          class="nav-link active"
+          aria-current="page"
+          routerLinkActive="active-link"
+          >Home</a
+        >
       </li>
-      <li class="nav-item"><a href="#" class="nav-link">Sign in</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Sign Up</a></li>
+      <li class="nav-item">
+        <a href="#" class="nav-link" routerLinkActive="active-link">Sign in</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link" routerLinkActive="active-link">Sign Up</a>
+      </li>
+      <marquee>
+        <a href="#" class="nav-link" routerLinkActive="active-link">Sign Up</a>
+      </marquee>
     </ul>
   </header>
 </div>
